# nexus-hr.v3

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/: SKILL.md  audit-SKILL.md
.claude/skills/design-patterns/: nexus-patterns.md
.github/: copilot-instructions.md
.github/skills/: SKILL.md
.github/skills/design-patterns/: nexus-patterns.md
apps/: __init__.py
apps/apis/: __init__.py  apps.py
apps/apis/v1/: __init__.py  apps.py  authentication.py  urls.py
apps/apis/v1/attendance/: __init__.py  urls.py  views.py
apps/apis/v1/auth/: urls.py  views.py
apps/apis/v1/departments/: __init__.py  serializers.py  services.py  urls.py  views.py
apps/apis/v1/documents/: __init__.py  serializers.py  urls.py  views.py
apps/apis/v1/documents/tests/: __init__.py  conftest.py  test_api.py
apps/apis/v1/employees/: serializers.py  urls.py  views.py
apps/apis/v1/employees/tests/: conftest.py  test_api.py
apps/apis/v1/positions/: __init__.py  serializers.py  services.py  urls.py  views.py
apps/attendance/: admin.py  apps.py  constants.py  models.py  selectors.py  urls_web.py
apps/attendance/models/: __init__.py
apps/audit/: admin.py  apps.py  models.py
apps/audit/migrations/: 0001_initial.py  __init__.py
apps/companies/: admin.py  apps.py  choices.py  constants.py  models.py  signals.py
apps/companies/migrations/: 0001_initial.py  0002_alter_companysubscription_company.py  __init__.py
apps/companies/tests/: __init__.py  conftest.py  test_models.py
apps/core/: admin.py  apps.py  models.py  signals.py
apps/core/migrations/: 0001_initial.py
apps/core/models/: __init__.py  audit.py  company.py  subscription.py  user.py
apps/departments/: admin.py  apps.py  choices.py  constants.py  exceptions.py  models.py  schemas.py  selectors.py  serializers.py
apps/departments/migrations/: 0001_initial.py  __init__.py
apps/departments/services/: __init__.py  department_service.py  position_service.py
apps/departments/tests/: __init__.py  conftest.py  test_department_api.py  test_department_integration.py  test_department_models.py  test_department_permissions.py  test_department_schemas.py  test_department_selectors.py  test_department_service.py  test_position_api.py  test_position_integration.py  test_position_models.py  test_position_permissions.py  test_position_selectors.py  test_position_service.py
apps/documents/: admin.py  apps.py  choices.py  exceptions.py  models.py  schemas.py  selectors.py  services.py
apps/documents/migrations/: 0001_initial.py  __init__.py
apps/documents/tests/: conftest.py  test_models.py
apps/employees/: admin.py  apps.py  choices.py  exceptions.py  models.py  schemas.py  selectors.py  signals.py
apps/employees/migrations/: 0001_initial.py
apps/employees/services/: employee_service.py
apps/employees/tests/: __init__.py  conftest.py  test_models.py
apps/hse/: __init__.py  admin.py  apps.py
apps/hse/models/: __init__.py
apps/payroll/: admin.py  apps.py
apps/payroll/models/: __init__.py
apps/shared/: apps.py  context_processors.py  exceptions.py  models.py  permissions.py  signals.py  tasks.py  urls_web.py  views_web.py
apps/shared/logging/: context.py  logger.py
apps/shared/middleware/: tenant_middleware.py
apps/shared/mixins/: soft_delete.py  timestamped.py
apps/shared/tests/: __init__.py  conftest.py  test_tenant_infrastructure.py  test_utils.py
apps/shared/utils/: dates.py  ids.py  pagination.py  security.py  storage.py
apps/users/: admin.py  apps.py  choices.py  exceptions.py  models.py  schemas.py  urls_web.py  views_web.py
apps/users/migrations/: 0001_initial.py  __init__.py
apps/users/services/: __init__.py  auth.py
apps/users/tests/: __init__.py  conftest.py  test_auth_service.py  test_auth_views.py  test_models.py  test_permissions.py
config/: __init__.py  asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  envcommon.py  local.py  logging.py  production.py
docs/: PRD-overview.md  database-schema.md  department-module-test.md  implementation-plan.md  implementation-steps.md  technical-requirement-document.md  ui-ux-brief.md  user-journey-flow.md  web-template-design-guide.md
static/css/: auth.css  base.css  components.css  dashboard.css  legal.css  tokens.css  welcome.css
static/js/: dashboard.js  main.js
templates/: index.html  privacy.html  tos.html
templates/auth/: login.html
templates/dashboard/: index.html
tests/: __init__.py  conftest.py  factories.py
