[project]
name = "nexus-hr-v3"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "django>=6.0.5",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-pydantic>=2.9.1",
    "psycopg[binary]>=3.3.4",
    "pydantic-extra-types>=2.11.1",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "python-dateutil>=2.9.0",
    "django-storages[s3]>=1.14",
    "celery[redis]>=5.6",
    "django-celery-beat>=2.7",
    "django-celery-results>=2.5",
    "redis>=5.0",
    "structlog>=25.5",
    "django-structlog[celery]>=10.0",
    "sentry-sdk[django]>=2.20",
    "structlog-sentry>=1.2",
    "drf-spectacular>=0.29.0",
    "whitenoise>=6.7",
]

[dependency-groups]
dev = [
    "pytest-django>=4.9",
    "factory-boy>=3.3",
    "freezegun>=1.5",
    "django-debug-toolbar>=4.4",
    "ruff>=0.9.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
]

[tool.ruff]
line-length = 110
target-version = "py314"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Django settings modules intentionally re-export via wildcard import.
"config/settings/__init__.py" = ["F401", "F403"]
"config/settings/local.py" = ["F401", "F403", "F405"]
"config/settings/production.py" = ["F401", "F403", "F405"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["apps", "tests"]
addopts = "--reuse-db -x --cov=apps --cov-report=term-missing -n auto --dist loadscope"
markers = [
    "unit: Unit test — single function/class, no DB or network I/O.",
    "integration: Integration test — multiple components, DB, services, or Celery tasks.",
    "feature: Feature test — full HTTP request/response cycle via DRF APIClient.",
]

log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)-8s %(name)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
branch = true
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/admin.py",
    "*/apps.py",
    "manage.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "def __repr__",
]

# ---------------------------------------------------------------------------
# pytest — Run: pytest (requires pip install ".[dev]" to include pytest-xdist)
# ---------------------------------------------------------------------------